packages/mantine/src/blocknoteStyles.css
/* ... */
.bn-mantine .bn-thread-comments,
.bn-mantine .bn-thread-composer {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.bn-mantine .bn-thread-comments {
  gap: 1rem;
}

.bn-mantine .bn-thread-comment {
  align-items: flex-start;
  flex-direction: column;
  gap: 0.25rem;
}

.bn-mantine .bn-thread-comment > .mantine-Group-root {
  gap: 12px;
}

.bn-mantine .bn-thread-comment p {
  color: var(--bn-colors-menu-text);
}

.bn-mantine .bn-thread .bn-header-text,
.bn-mantine .bn-thread-comment .bn-resolved-text {
  font-size: 0.8rem;
  font-style: italic;
}

.bn-mantine .bn-comment-actions-wrapper {
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

/* Comment action toolbar styling */
.bn-mantine .bn-action-toolbar {
  align-self: flex-end;
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  border-radius: var(--bn-border-radius-medium);
  gap: 0;
  padding: 2px;
}

.bn-action-toolbar .mantine-Button-root,
.bn-action-toolbar .mantine-ActionIcon-root {
  background-color: var(--bn-colors-menu-background);
  border: none;
  border-radius: var(--bn-border-radius-small);
  color: var(--bn-colors-menu-text);
}

.bn-action-toolbar .mantine-Button-root:hover,
.bn-action-toolbar .mantine-ActionIcon-root:hover {
  background-color: var(--bn-colors-hovered-background);
  border: none;
  color: var(--bn-colors-hovered-text);
}

.bn-action-toolbar .mantine-Button-root[data-selected],
.bn-action-toolbar .mantine-ActionIcon-root[data-selected] {
  background-color: var(--bn-colors-selected-background);
  border: none;
  color: var(--bn-colors-selected-text);
}

.bn-action-toolbar .mantine-Button-root[data-disabled],
.bn-action-toolbar .mantine-ActionIcon-root[data-disabled] {
  background-color: var(--bn-colors-disabled-background);
  border: none;
  color: var(--bn-colors-disabled-text);
}

.bn-mantine .bn-action-toolbar .mantine-Menu-itemLabel {
  font-size: 12px;
}

/* Badge styling */
.bn-mantine .bn-badge-group {
  display: flex;
  gap: 4px;
  justify-content: flex-start;
  width: 100%;
}

.bn-mantine .bn-badge {
  flex-grow: 0;
}

.bn-mantine .bn-badge .mantine-Chip-label {
  padding: 0 8px;
}

.bn-mantine .bn-badge .mantine-Chip-label:not([data-checked="true"]) {
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  color: var(--bn-colors-menu-text);
}

.bn-mantine .bn-badge .mantine-Chip-label:hover {
  border: 1px solid var(--mantine-primary-color-filled-hover);
  color: var(--mantine-primary-color-filled-hover);
}

.bn-mantine
  .bn-badge
  .mantine-Chip-label
  > span:not(.mantine-Chip-iconWrapper) {
  display: inline-flex;
  gap: 4px;
}

.bn-mantine
  .bn-badge
  .mantine-Chip-label
  > span:not(.mantine-Chip-iconWrapper)
  > span {
  align-items: center;
  display: inline-flex;
  justify-content: center;
}

/* Combobox styling */
.bn-mantine .bn-combobox-input,
.bn-mantine .bn-combobox-items:not(:empty) {
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  border-radius: var(--bn-border-radius-medium);
  box-shadow: var(--bn-shadow-medium);
  color: var(--bn-colors-menu-text);
  gap: 4px;
  min-width: 145px;
  padding: 2px;
}

.bn-mantine .bn-combobox-input .bn-combobox-icon,
.bn-mantine .bn-combobox-input .bn-combobox-right-section {
  align-items: center;
  display: flex;
  justify-content: center;
}

.bn-mantine .bn-combobox-input .bn-combobox-error {
  color: var(--bn-colors-highlights-red-background);
}

/* We need to get rid of the checked icon - you can set the icon prop to an
empty element (<></>), but even so Mantine leaves extra space for the icon, so
we just don't display it in CSS instead. */
.bn-mantine .bn-badge .mantine-Chip-iconWrapper {
  display: none;
}

